[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rssadd"
description = "Add an item to an RSS feed"
license = { text = "MIT" }
authors = [{name = "Matt Wisniewski", email = "healthycrowd@mattw.life"}]
keywords = ["rssadd", "utility", "rss", "add"]
dynamic = ["version"]
requires-python = ">=3.8.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "lxml~=4.9",
]

[project.urls]
homepage = "https://github.com/healthycrowd/rssadd"
